# lem_in

./: ._CMakeLists.txt  ._Makefile  ._libft  ._map  ._map.txt  ._map1.txt  ._maps  CMakeLists.txt  Makefile  algo.c  ant.c  checkers.c  lem-in  main.c  map  map.txt  map1.txt  path.c  serve.c  sort.c  way.c
includes/: lem-in.h  lem_in.h
libft/: Makefile
libft/includes/: libft.h
libft/src/: ._ft_lstadd.c  ._ft_strnstr.c  ._ft_strprefix.c  ft_atoi.c  ft_atoll.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstaddend.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memcpy_rev.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+27 more)
maps/: ._10_m.txt  ._11_m.txt  ._12_m.txt  ._13_m.txt  ._14_m.txt  ._15_m.txt  ._16_m.txt  ._17_m.txt  ._18_m.txt  ._19_m.txt  ._1_m.txt  ._20_m.txt  ._21_m.txt  ._22_m.txt  ._23_m.txt  ._24_m.txt  ._25_m.txt  ._26_m.txt  ._27_m.txt  ._28_m.txt  ._29_m.txt  ._2_m.txt  ._30_m.txt  ._31_m.txt  ._32_m.txt  ._33_m.txt  ._34_m.txt  ._35_comments.txt  ._3_m.txt  ._4_m.txt  ._5_m.txt  ._6_m.txt  ._7_m.txt  ._8_m.txt  ._9_m.txt  ._Lem_in_Kiev_subway.txt  ._algo.txt  ._algo_2.txt  ._algo_3.txt  ._algo_4.txt  (+31 more)
src/: algo.c  ant.c  checkers.c  free_func.c  main.c  path.c  path_processor.c  serve.c  sort.c  way.c
